src/pages/management/webhooks/v3.6/index.mdx
---
weight: 10
category: "management"
subcategory: "webhooks"
title: "Webhooks"
tagline: "The refrence of LiveChat webhooks."
desc: "The refrence of available LiveChat webhooks. Use webhooks to build automated flows in your integrations."
apiVersion: "3.6"
robots: "noindex"
---

This document contains a reference of available webhooks. Webhooks are helpful for building applications that execute particular behavior in response to various actions, allowing you to create automated flows.
In order to receive webhooks, you need to [register](/management/configuration-api/v3.6/#register-webhook) them first.

💡 Not what you're looking for? Try these instead:

- [See webhook methods.](/management/configuration-api/v3.6/#webhooks)
- [Learn how to use webhooks with the LiveChat API.](https://developers.livechat.com/updates/setting-up-webhooks-with-livechat-api/)
- [Read the Changelog.](../changelog/)

## Available webhooks

|                   |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| ----------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Chats**         | [`incoming_chat`](#incoming_chat) [`chat_deactivated`](#chat_deactivated)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
| **Chat access**   | [`chat_access_updated`](#chat_access_updated) [`chat_transferred`](#chat_transferred)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 |
| **Chat users**    | [`user_added_to_chat`](#user_added_to_chat) [`user_removed_from_chat`](#user_removed_from_chat)                                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| **Events**        | [`incoming_event`](#incoming_event) [`event_deleted`](#event_deleted) [`event_updated`](#event_updated) [`incoming_rich_message_postback`](#incoming_rich_message_postback)                                                                                                                                                                                                                                                                                                                                                                                                                             |
| **Properties**    | [`chat_properties_updated`](#chat_properties_updated) [`chat_properties_deleted`](#chat_properties_deleted) [`thread_properties_deleted`](#thread_properties_deleted) [`thread_properties_updated`](#thread_properties_updated) [`event_properties_updated`](#event_properties_updated) [`event_properties_deleted`](#event_properties_deleted)                                                                                                                                                                                                                       |
| **Thread tags**   | [`thread_tagged`](#thread_tagged) [`thread_untagged`](#thread_untagged)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               |
| **Status**        | [`routing_status_set`](#routing_status_set)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                           |
| **Customers**     | [`incoming_customer`](#incoming_customer) [`customer_session_fields_updated`](#customer_session_fields_updated)                                                                                                                                                                                                                                                                                                                                                                                                                                                       |
| **Configuration** | [`agent_created`](#agent_created) [`agent_approved`](#agent_approved) [`agent_updated`](#agent_updated) [`agent_suspended`](#agent_suspended) [`agent_unsuspended`](#agent_unsuspended) [`agent_deleted`](#agent_deleted) [`auto_accesses_updated`](#auto_accesses_updated) [`bot_created`](#bot_created) [`bot_updated`](#bot_updated) [`bot_deleted`](#bot_deleted) [`group_created`](#group_created) [`group_updated`](#group_updated) [`group_deleted`](#group_deleted) [`tag_created`](#tag_created) [`tag_deleted`](#tag_deleted) [`tag_updated`](#tag_updated) |
| **Other**         | [`events_marked_as_seen`](#events_marked_as_seen)                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                     |

## Chats

<Section>

<Text>

### `incoming_chat`

Informs about a chat coming with a new thread. The webhook payload contains the whole chat data structure. If the chat was started with some initial events, the thread object contains them.

#### Specifics

|                        |                                                                                                                                                                 |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_chat`                                                                                                                                                 |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#incoming_chat) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#incoming_chat) |

#### Webhook payload

| Field  | Notes                                                                   |
| ------ | ----------------------------------------------------------------------- |
| `chat` | [Chat data structure](/messaging/agent-chat-api/data-structures/#chats) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "incoming_chat",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat": {
    "id": "PJ0MRSHTDG",
    "users": [
      // array of "User" objects
    ],
    "properties": {
      // "Property" object
    },
    "thread": {
      // "Thread" object
      }
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `chat_deactivated`

Informs that a chat was deactivated by closing the currently open thread.

#### Specifics

|                        |                                                                                                                                                                       |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `chat_deactivated`                                                                                                                                                    |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#chat_deactivated) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#chat_deactivated) |

#### Webhook payload

| Field     | Notes                                         |
| --------- | --------------------------------------------- |
| `user_id` | Missing if a thread was closed by the router. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "chat_deactivated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c" // optional
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chat access

<Section>

<Text>

### `chat_access_updated`

Informs about the update of a user's access to a particular chat. It contains the updated [access](/messaging/agent-chat-api/v3.6/data-structures/#access-1) data structure.

#### Specifics

|                        |                                                                                    |
| ---------------------- | ---------------------------------------------------------------------------------- |
| **Action**             | `chat_access_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#chat_access_updated) |

#### Webhook payload

| Field    | Notes                                                                                              |
| -------- | -------------------------------------------------------------------------------------------------- |
| `id`     | Chat ID                                                                                            |
| `access` | The updated chat [access](/messaging/agent-chat-api/v3.6/data-structures/#access-1) data structure |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "chat_access_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "PJ0MRSHTDG",
    "access": {
      "group_ids": [0, 1]
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `chat_transferred`

Informs that a chat was transferred to a different group or to an agent.

#### Specifics

|                        |                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------- |
| **Action**             | `chat_transferred`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#chat_transferred) |

#### Webhook payload

| Field            | Notes                                                                    |
| ---------------- | ------------------------------------------------------------------------ |
| `thread_id`      | Present if the chat is active.                                           |
| `transferred_to` | IDs of the groups and agents the chat is assigned to after the transfer. |
| `reason` **\***  | Informs why the chat was transferred.                                    |
| `queue`          | Present if the chat is queued after the transfer.                        |

**\*)**
Possible reasons: `manual`, `inactive`, `assigned`, `unassigned`, `other`.

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "chat_transferred",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "requester_id": "jones@example.com",
    "reason": "manual",
    "transferred_to": {
      "group_ids": [ 19 ],
      "agent_ids": ["smith@example.com"],
    },
    "queue": {
      "position": 42,
      "wait_time": 1337,
      "queued_at": "2019-12-09T12:01:18.909000Z"
    }
  }
}
```

</CodeResponse>

</Code>

</Section>

## Chat users

<Section>

<Text>

### `user_added_to_chat`

Informs that a user (Customer or Agent) was added to a chat.

#### Specifics

|                        |                                                                                                                                                                           |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `user_added_to_chat`                                                                                                                                                      |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#user_added_to_chat) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#user_added_to_chat) |

#### Webhook payload

| Field       | Notes                                |
| ----------- | ------------------------------------ |
| `user_type` | Possible values: `agent`, `customer` |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "user_added_to_chat",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "user": {
      // "User > Customer" or "User > Agent" object
    },
    "reason": "manual",
    "requester_id": "smith@example.com"
  },
  "additional_data": {
    "chat_properties": { //optional
      // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `user_removed_from_chat`

Informs that a user (Customer or Agent) was removed from a chat.

#### Specifics

|                        |                                                                                                                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `user_removed_from_chat`                                                                                                                                                          |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#user_removed_from_chat) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#user_removed_from_chat) |

#### Webhook payload

| Field       | Notes                                |
| ----------- | ------------------------------------ |
| `user_type` | Possible values: `agent`, `customer` |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "user_removed_from_chat",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "user_id": "agent@example.com",
    "reason": "manual",
    "requester_id": "smith@example.com"
  },
  "additional_data": {
    "chat_properties": { //optional
      // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Events

<Section>

<Text>

### `incoming_event`

Informs about an incoming [event](/messaging/agent-chat-api/v3.6/data-structures/#events) sent to a chat.

#### Specifics

|                        |                                                                                                                                                                   |
| ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_event`                                                                                                                                                  |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#incoming_event) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#incoming_event) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "incoming_event",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event": {
      // "Event" object
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `event_deleted`

Informs that an [event](/messaging/agent-chat-api/v3.6/data-structures/#events) was deleted.

#### Specifics

|                        |                                                                                                                                                                 |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `event_deleted`                                                                                                                                                 |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#event_deleted) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#event_deleted) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

  ```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "event_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event_id": "K600PKZON8_4"
  },
  "additional_data": {
    "chat_properties": { //optional
      // chat properties
    },
    "chat_presence_user_ids": [ //optional
    // User IDs
    ]
  }
}
  ```

</CodeResponse>

</Code>

</Section>


<Section>

<Text>

### `event_updated`

Informs that an [event](/messaging/agent-chat-api/v3.6/data-structures/#events) was updated.

#### Specifics

|                        |                                                                                                                                                                 |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `event_updated`                                                                                                                                                 |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#event_updated) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#event_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "event_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event": {
      // "Event" object
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `incoming_rich_message_postback`

Informs about an incoming [rich message](/messaging/agent-chat-api/v3.6/data-structures/#rich-message) postback. The webhook payload contains the info on the postback itself, as well as the chat it was sent in.

#### Specifics

|                        |                                                                                                                                                                                                   |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `incoming_rich_message_postback`                                                                                                                                                                  |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#incoming_rich_message_postback) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#incoming_rich_message_postback) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "incoming_rich_message_postback",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event_id": "0affb00a-82d6-4e07-ae61-56ba5c36f743",
    "postback": {
      "id": "action_yes",
      "toggled": true
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Properties

<Section>

<Text>

### `chat_properties_updated`

Informs about those chat properties that were updated.

#### Specifics

|                        |                                                                                                                                                                                     |
| ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_updated`                                                                                                                                                           |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#chat_properties_updated) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#chat_properties_updated) |

#### Webhook payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "chat_properties_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
        "string_property": "string value"
      }
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `chat_properties_deleted`

Informs about those chat properties that were deleted.

#### Specifics

|                        |                                                                                                                                                                                     |
| ---------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `chat_properties_deleted`                                                                                                                                                           |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#chat_properties_deleted) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#chat_properties_deleted) |

#### Webhook payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "chat_properties_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": [
        "string_property"
      ]
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `thread_properties_updated`

Informs about those thread properties that were updated.

#### Specifics

|                        |                                                                                                                                                                                         |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `thread_properties_updated`                                                                                                                                                             |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#thread_properties_updated) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#thread_properties_updated) |

#### Webhook payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "thread_properties_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
        "string_property": "string value"
      }
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `thread_properties_deleted`

Informs about those thread properties that were deleted.

#### Specifics

|                        |                                                                                                                                                                                         |
| ---------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `thread_properties_deleted`                                                                                                                                                             |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#thread_properties_deleted) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#thread_properties_deleted) |

#### Webhook payload

| Field        | Notes                                                                                                |
| ------------ | ---------------------------------------------------------------------------------------------------- |
| `properties` | Not a full `properties` object. This push shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "thread_properties_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": [
        "string_property"
          ]
      }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `event_properties_updated`

Informs about those event properties that were updated.

#### Specifics

|                        |                                                                                                                                                                                       |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `event_properties_updated`                                                                                                                                                            |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#event_properties_updated) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#event_properties_updated) |

#### Webhook payload

| Field        | Notes                                                                                                           |
| ------------ | --------------------------------------------------------------------------------------------------------------- |
| `properties` | This is not a full `properties` object. This webhook shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "event_properties_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event_id": "0affb00a-82d6-4e07-ae61-56ba5c36f743",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": {
        "string_property": "property_value"
      }
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `event_properties_deleted`

Informs about those event properties that were deleted.

#### Specifics

|                        |                                                                                                                                                                                       |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `event_properties_deleted`                                                                                                                                                            |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#event_properties_deleted) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#event_properties_deleted) |

#### Webhook payload

| Field        | Notes                                                                                                           |
| ------------ | --------------------------------------------------------------------------------------------------------------- |
| `properties` | This is not a full `properties` object. This webhook shows only the properties that have been recently updated. |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "event_properties_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "event_id": "0affb00a-82d6-4e07-ae61-56ba5c36f743",
    "properties": {
      "0805e283233042b37f460ed8fbf22160": [
        "string_property"
          ]
      }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Thread tags

<Section>

<Text>

### `thread_tagged`

Informs that a thread was tagged.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `thread_tagged`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#thread_tagged) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "thread_tagged",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "tag": "bug_report"
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `thread_untagged`

Informs that a thread was untagged.

#### Specifics

|                        |                                                                                |
| ---------------------- | ------------------------------------------------------------------------------ |
| **Action**             | `thread_untagged`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#thread_untagged) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "thread_untagged",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "chat_id": "PJ0MRSHTDG",
    "thread_id": "K600PKZON8",
    "tag": "bug_report"
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Status

<Section>

<Text>

### `routing_status_set`

Informs that an Agent's or Bot's status has changed.

#### Specifics

|                        |                                                                                   |
| ---------------------- | --------------------------------------------------------------------------------- |
| **Action**             | `routing_status_set`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#routing_status_set) |

#### Webhook payload

| Field    | Notes                                                                                |
| -------- | ------------------------------------------------------------------------------------ |
| `status` | Possible values: `accepting chats`, `not accepting chats`, `offline` (for Bots only) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "routing_status_set",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "agent_id":"agent1@example.com",
    "status": "accepting chats"
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Customers

<Section>

<Text>

### `incoming_customer`

Informs that a new Customer registered.

#### Specifics

|                        |                                                                                  |
| ---------------------- | -------------------------------------------------------------------------------- |
| **Action**             | `incoming_customer`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#incoming_customer) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "incoming_customer",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "customer": {
    // "User > Customer" object
    }
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `customer_session_fields_updated`

Informs that a chatting Customer's session fields were updated. The webhook will be sent for each active chat the Customer has.

#### Specifics

|            |                                   |
| ---------- | --------------------------------- |
| **Action** | `customer_session_fields_updated` |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "customer_session_fields_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "5280e68c-9692-4212-4ba9-85f7d8af55cd",
    "active_chat": {
        "chat_id": "PJ0MRSHTDG",
        "thread_id": "K600PKZON8"
    }
    ],
    "session_fields": [
      {
        "key": "value"
      }
    ]
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>

## Configuration

<Section>

<Text>

### `agent_created`

Informs that a new agent account was created. The payload contains the full state of the [agent](/messaging/agent-chat-api/v3.6/data-structures/#agent) data structure, including empty fields.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `agent_created`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_created) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_created",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com",
    "name": "Agent Smith",
    "role": "viceowner",
    "awaiting_approval": false,
    "groups": [
      {
        "id": 5,
        "priority": "first"
      },
      {
        "id": 2,
        "priority": "last"
      },
      {
        "id": 1,
        "priority": "normal"
      }
    ],
    "notifications": [
      "new_visitor",
      "new_goal",
      "visitor_is_typing"
    ],
    "email_subscriptions": [
      "weekly_summary"
    ],
    "work_scheduler": {
      "timezone": "Europe/Warsaw",
      "schedule": [
        {
          "day": "monday",
          "enabled": true,
          "start": "08:30",
          "end": "12:30"
        },
        {
          "day": "monday",
          "enabled": true,
          "start": "13:30",
          "end": "16:30"
        }
      ]
    }
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `agent_approved`

Informs that an agent's account was approved and is now active.

#### Specifics

|                        |                                                                               |
| ---------------------- | ----------------------------------------------------------------------------- |
| **Action**             | `agent_approved`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_approved) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_approved",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `agent_updated`

Informs that an agent's configuration changed. Contains only the updated properties.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `agent_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com",
    "work_scheduler": {
      "timezone": "Europe/Warsaw",
      "schedule": [
        {
          "day": "monday",
          "enabled": true,
          "start": "08:30",
          "end": "12:30"
        },
        {
          "day": "monday",
          "enabled": true,
          "start": "13:30",
          "end": "16:30"
        },
        {
          "day": "friday",
          "enabled": true,
          "start": "07:30",
          "end": "21:30"
        }
      ]
    }
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `agent_suspended`

Informs that an agent's account was suspended.

#### Specifics

|                        |                                                                                |
| ---------------------- | ------------------------------------------------------------------------------ |
| **Action**             | `agent_suspended`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_suspended) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_suspended",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `agent_unsuspended`

Informs that an agent's account was unsuspended.

#### Specifics

|                        |                                                                                  |
| ---------------------- | -------------------------------------------------------------------------------- |
| **Action**             | `agent_unsuspended`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_unsuspended) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_unsuspended",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `agent_deleted`

Informs that an agent's account was deleted.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `agent_deleted`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#agent_deleted) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "agent_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "smith@example.com"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  }
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `auto_accesses_updated`

Informs that auto access rules were modified. The payload contains an array of all changes done as result of adding, updating, or deleting auto access rule.
The resulting payload can contain multiple objects depending on the action:
- for the added auto access rule, the payload contains the complete state of the auto access rule data structure, including empty fields.
- for the updated auto access rule, the payload contains only the updated properties.
- for the deleted auto access rule, the payload confirms the deletion.

#### Specifics

|                        |                                                                                      |
| ---------------------- | ------------------------------------------------------------------------------------ |
| **Action**             | `auto_accesses_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#auto_accesses_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook after adding auto access rule'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "auto_access_added",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": [
    {
        "id": "a2710c4680fa15700ae046940a11a329",
        "next_id": "f65e41f43bbb2fefe3756698ba47caeb",
        "status": "updated"
    },
    {
        "id": "f65e41f43bbb2fefe3756698ba47caeb",
        "description": "",
        "access": {
            "groups": [
                0
            ]
        },
        "conditions": {
            "url": {
                "values": [
                    {
                        "value": "https://www.auto-access.test",
                        "exact_match": false
                    }
                ]
            },
            "domain": {
                "values": [
                    {
                        "value": "https://www.auto-access.test",
                        "exact_match": true
                    }
                ]
            },
            "geolocation": {
                "values": [
                    {
                        "country": "United States",
                        "country_code": "US",
                        "region": "California",
                        "city": "Mountain View"
                    }
                ]
            }
        },
        "next_id": "",
        "status": "added"
    }
  ],
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

<Code>

<CodeResponse title={'Sample webhook after updating auto access rule'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "auto_access_added",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": [
    {
      "id": "a2710c4680fa15700ae046940a11a329",
      "description": "Chats on livechat.com from United States",
      "access": {
        "groups": [ 1 ]
      },
      "conditions": {
        "domain": {
          "values": [
            {
              "value": "livechat.com",
              "exact_match": true
            }
          ]
        },
      "geolocation": {
        "values": [
          {
            "country": "United States",
            "country_code": "US"
          }
        ]
      }
      "next_id": "",
      "status": "updated"
    },
    {
        "id": "f65e41f43bbb2fefe3756698ba47caeb",
        "description": "Auto access updated",
        "next_id": "a2710c4680fa15700ae046940a11a329",
        "status": "updated"
    }
  ],
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

<Code>

<CodeResponse title={'Sample webhook after deleting auto access rule'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "auto_access_added",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": [
    {
        "id": "f65e41f43bbb2fefe3756698ba47caeb",
        "next_id": "",
        "status": "updated"
    },
    {
        "id": "a2710c4680fa15700ae046940a11a329",
        "status": "deleted"
    }
  ],
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `bot_created`

Informs that a new bot was added. The payload contains the full state of the [bot](/management/configuration-api/v3.6/#bots) data structure, including empty fields.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `bot_created`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#bot_created) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "bot_created",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "5c9871d5372c824cbf22d860a707a578",
    "name": "Bot Name",
    "default_group_priority": "first",
    "groups": [
      {
        "id": 0,
        "priority": "normal"
      }
    ],
    "owner_client_id": "asXdesldiAJSq9padj"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `bot_updated`

Informs that a bot's configuration changed. Contains only the updated properties.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `bot_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#bot_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "bot_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "5c9871d5372c824cbf22d860a707a578",
    "name": "New Bot Name",
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `bot_deleted`

Informs that a bot was deleted.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `bot_deleted`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#bot_deleted) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "bot_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": "5c9871d5372c824cbf22d860a707a578"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `group_created`

Informs that a group was created within a license. The payload contains the full state of the [group](/management/configuration-api/v3.6/#groups) data structure, including empty fields.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `group_created`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#group_created) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "group_created",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
  "id": 42,
  "name": "sales",
    "language_code": "en",
    "agent_priorities": {
      "agent@example.com": "normal",
      "other_agent@example.com": "first"
    }
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {}
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `group_deleted`

Informs that a group was deleted within a license.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `group_deleted`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#group_deleted) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "group_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
      "id": 42
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {}
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `group_updated`

Informs that a group was updated within a license. Only changed fields are sent.

#### Specifics

|                        |                                                                              |
| ---------------------- | ---------------------------------------------------------------------------- |
| **Action**             | `group_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#group_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "group_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "id": 1,
    "agent_priorities": {
      "agent@example.com": "normal"
    }
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  }
  "additional_data": {}
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `tag_created`

Informs that a tag was created within a license. The payload contains the full state of the [tag](/management/configuration-api/v3.6/#tags) data structure, including empty fields.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `tag_created`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#tag_created) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "tag_created",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "name": "docs_feedback",
    "group_ids": [ 0, 42 ],
    "created_at": "2019-12-09T12:01:18.909000Z",
    "author_id": "smith@example.com"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `tag_deleted`

Informs that a tag was deleted within a license.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `delete_tag`                                                               |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#tag_deleted) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "tag_deleted",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "name": "docs_feedback"
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

<Section>

<Text>

### `tag_updated`

Informs that a tag was updated within a license.

#### Specifics

|                        |                                                                            |
| ---------------------- | -------------------------------------------------------------------------- |
| **Action**             | `tag_updated`                                                              |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#tag_updated) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "tag_updated",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "name": "docs_feedback",
    "group_ids": [ 0, 42 ]
  },
  "requester": {
    "user_id": "user@example.com",
    "account_id": "f09ba25b-8be8-4fcd-a2c8-0b1c567aec85",
    "client_id": "1b4237f476826986da63022a76c35bb1"
  },
  "additional_data": {
    // no additional data
  }
}
```

</CodeResponse>

</Code>

</Section>

## Other

<Section>

<Text>

### `events_marked_as_seen`

Informs that a user has seen events up to a specific time.

#### Specifics

|                        |                                                                                                                                                                                 |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| **Action**             | `events_marked_as_seen`                                                                                                                                                         |
| **Push equivalent in** | [`Agent Chat API`](/messaging/agent-chat-api/v3.6/rtm-pushes/#events_marked_as_seen) [`Customer Chat API`](/messaging/customer-chat-api/v3.6/rtm-pushes/#events_marked_as_seen) |

</Text>

<Code>

<CodeResponse title={'Sample webhook'}>

```json
{
  "webhook_id": "<webhook_id>",
  "secret_key": "<secret_key>",
  "action": "events_marked_as_seen",
  "organization_id": "390e44e6-f1e6-0368c-z6ddb-74g14508c2ex",
  "payload": {
    "user_id": "b7eff798-f8df-4364-8059-649c35c9ed0c",
    "chat_id": "PJ0MRSHTDG",
    "seen_up_to": "2017-10-12T15:19:21.010200Z"
  },
  "additional_data": {
    "chat_properties": { //optional
        // chat properties
    },
    "chat_presence_user_ids": [ //optional
      // User IDs
    ]
  }
}
```

</CodeResponse>

</Code>

</Section>
